--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
       <!-- main css -->
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/responsive.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&family=Playwrite+DK+Loopet:wght@100..400&display=swap" rel="stylesheet">
 
-  </head>
+      <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&family=Lilita+One&family=Playwrite+DK+Loopet:wght@100..400&display=swap" rel="stylesheet">
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
